crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@139.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT count(*) FROM quad_point_tbl WHERE p IS NOT NULL;
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "FROM"
  Whitespace@20..21 " "
  RangeVar@21..35
    Ident@21..35 "quad_point_tbl"
  Whitespace@35..36 " "
  Where@36..41 "WHERE"
  Whitespace@41..42 " "
  NullTest@42..55
    ColumnRef@42..43
      Ident@42..43 "p"
    Whitespace@43..44 " "
    Is@44..46 "IS"
    Whitespace@46..47 " "
    Not@47..50 "NOT"
    Whitespace@50..51 " "
    NullP@51..55 "NULL"
  Ascii59@55..56 ";"

